@@ -1,20 +1,13 @@
-修改项目 BurpLoaderKeygen  
+修改自项目 BurpLoaderKeygen  
 https://github.com/h3110w0r1d-y/BurpLoaderKeygen
 
-下载地址：[BurpLoaderKeygen-Modified](https://github.com/bewhale/BurpLoaderKeygen-Modified/releases/download/1.2/BurpLoaderKeygen.jar)  
-
-新版 windows(64-bit) burp 安装后自带高版本JAVA环境,    
-修改注册机自动调用目录下JAVA的路径，  
+新版 windows(64-bit) burp 安装后自带高版本JAVA环境,  
+官网下载地址：https://portswigger.net/burp/releases
   
-![](https://github.com/bewhale/BurpLoaderKeygen-Modified/blob/main/burpsuite.png?raw=true)
+![](https://github.com/bewhale/BurpLoaderKeygen-Modified/blob/main/img/burpsuite2.png?raw=true)
 
-![](https://github.com/bewhale/BurpLoaderKeygen-Modified/blob/main/jdk.png?raw=true)
+![](https://github.com/bewhale/BurpLoaderKeygen-Modified/blob/main/img/burpsuite.png?raw=true)
 
+![](https://github.com/bewhale/BurpLoaderKeygen-Modified/blob/main/img/burpsuite1.png?raw=true)
 
-默认启动项参数添加了  
-```
---illegal-access=permit
-```
-
-可以自定义JAVA路径及参数来启动burp   
-![](https://github.com/bewhale/BurpLoaderKeygen-Modified/blob/main/BurpLoaderKeygen.png?raw=true)
+![](https://github.com/bewhale/BurpLoaderKeygen-Modified/blob/main/img/burpsuite3.png?raw=true)
